# Sandbox

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  conanfile.txt  conansetup.py
Editor/: CMakeLists.txt  Editor.pch.hpp  EditorApplication.cg  EditorApplication.cpp  EditorApplication.hpp  EditorReflection.hpp  main.cpp
Editor/Assets/: config.yaml
Editor/ClassGen/: ClassGenSettings.cpp  ClassGenSettings.hpp
Editor/Components/: EditorWindow.cg  EditorWindow.cpp  EditorWindow.hpp
Editor/Data/: Config.hpp  EditorConfig.cg  EditorConfig.cpp  EditorConfig.hpp  EditorConfigData.cg  EditorConfigData.hpp  Extensions.cpp  Extensions.hpp  Workspace.cpp  Workspace.hpp
Editor/Data/Configs/: ExtensionsConfig.cg  ExtensionsConfig.hpp  FileBrowserConfig.cg  FileBrowserConfig.hpp  FileConfig.cg  FileConfig.hpp  FileType.cg  FileType.hpp  GeneralConfig.cg  GeneralConfig.hpp
Editor/Editors/: BinaryEditor.cpp  BinaryEditor.hpp  ClassGenEditor.cpp  ClassGenEditor.hpp  Editor.cpp  Editor.hpp  TextEditor.cpp  TextEditor.hpp
Editor/Views/: MainMenu.cpp  RootView.cpp  Views.hpp
Editor/Views/File/: FileDialogs.cpp
Editor/Views/Other/: FileBrowser.cpp  UtilsViews.cpp  WelcomePageView.cpp
Editor/Views/Settings/: EnvironmentView.cpp  ExtensionsView.cpp  FileBrowserSettingsView.cpp  FileTypesView.cpp  GeneralSettingsView.cpp  SettingsView.cpp
Editor/Views/View/: ConsoleView.cpp  DebugView.cpp  ImportView.cpp
Frameworks/: CMakeLists.txt  Frameworks.pch.hpp
Frameworks/ClassGen/: CMakeLists.txt  Class.gen.hpp  ClassGen.hpp  ClassGenGlobals.hpp  Classes.hpp
Frameworks/ClassGen/Classes/: BaseInfo.cg  BaseInfo.hpp  ClassInfo.cg  ClassInfo.hpp  FileInfo.cg  FileInfo.hpp  FunctionInfo.cg  FunctionInfo.hpp  ParameterInfo.cg  ParameterInfo.hpp  PropertyInfo.cg  PropertyInfo.hpp  TypeInfo.cg  TypeInfo.hpp  TypeInfoSerializer.hpp
Frameworks/Core/: Application.cg  Application.cpp  Application.hpp  ApplicationComponent.cg  ApplicationComponent.cpp  ApplicationComponent.hpp  CMakeLists.txt  Core.pch.hpp  CoreReflection.hpp  EntryPoint.hpp
Frameworks/ECS/: CMakeLists.txt  ECS.pch.hpp  ECSReflection.hpp  ECSUtils.hpp
Frameworks/ECS/Graphics/: CameraComponent.cg  CameraComponent.hpp  EmptySystem.cg  EmptySystem.cpp  EmptySystem.hpp  GraphicsSystem.cg  GraphicsSystem.cpp  GraphicsSystem.hpp  MeshComponent.cg  MeshComponent.hpp  TransformComponent.cg  TransformComponent.cpp  TransformComponent.hpp
Frameworks/ECS/Scene/: EScene.cg  EScene.hpp  Entity.cg  Entity.hpp  EntityComponent.cg  EntityComponent.hpp  EntityComponentAllocation.hpp  PersistentComponent.cg  PersistentComponent.hpp  SceneUtils.cpp  SceneUtils.hpp
Frameworks/ECS/System/: System.cg  System.cpp  System.hpp
Frameworks/ECS/UI/: ImGuiSystem.cpp  ImGuiSystem.hpp  UIImageComponent.cg  UIImageComponent.hpp  UITextComponent.cg  UITextComponent.hpp  UIViewComponent.cg  UIViewComponent.hpp
Frameworks/ECS/Utils/: HirerachyComponent.cg  HirerachyComponent.hpp  HirerachyFunctions.hpp  MovementComponent.cg  MovementComponent.hpp  MovementSystem.cg  MovementSystem.cpp  MovementSystem.hpp  PawnComponent.cg  PawnComponent.hpp  PawnSystem.cpp  PawnSystem.hpp  RootComponent.cg  RootComponent.hpp
Frameworks/Graphics/: CMakeLists.txt  Graphics.pch.hpp  GraphicsForwardDeclaration.hpp  PrivateImplementation.hpp
Frameworks/Graphics/Material/: Material.cg  Material.cpp  Material.hpp  MaterialRenderingSettings.cg  MaterialRenderingSettings.cpp  MaterialRenderingSettings.hpp  Shader.cg  Shader.cpp  Shader.hpp  ShaderHelper.cpp  ShaderHelper.hpp  TextureSampler.cg  TextureSampler.cpp  TextureSampler.hpp
Frameworks/Graphics/Mesh/: Mesh.cg  Mesh.cpp  Mesh.hpp
Frameworks/ImGuiIntegration/: CMakeLists.txt  ImGuiIntegration.cpp  ImGuiIntegration.hpp  ImGuiIntegration.pch.hpp
Frameworks/Input/: CMakeLists.txt  Input.pch.hpp  InputComponent.cg  InputComponent.hpp  InputReflection.hpp  InputSystem.cg  InputSystem.cpp  InputSystem.hpp  SceneSystem.cg  SceneSystem.cpp  SceneSystem.hpp  UIInputSystem.cg  UIInputSystem.cpp  UIInputSystem.hpp
Frameworks/NativeApplication/: CMakeLists.txt  NativeApplication.cpp  NativeApplication.hpp  NativeApplication.pch.hpp  NativeApplicationReflection.hpp  NativeEntryPoint.cpp  NativeWindowHandle.cg  NativeWindowHandle.cpp  NativeWindowHandle.hpp  WindowComponent.cg  WindowComponent.cpp  WindowComponent.hpp
Frameworks/SceneWindow/: CMakeLists.txt  SceneWindow.pch.hpp  SceneWindowComponent.cg  SceneWindowComponent.cpp  SceneWindowComponent.hpp  SceneWindowReflection.hpp
Frameworks/SystemExtension/: CMakeLists.txt  Extension.cg  Extension.hpp  Extension.inl  ExtensionHandle.cg  ExtensionHandle.hpp  ExtensionInfo.cg  ExtensionInfo.hpp  ExtensionLibrary.cg  ExtensionLibrary.hpp  ExtensionLibrary.inl  SystemExtension.pch.hpp
Frameworks/UI/: CMakeLists.txt  Class.gen.hpp  UI.hpp
Frameworks/UI/View/: Button.cpp  (+9 more)
Frameworks/Utils/: CMakeLists.txt  Utils.hpp
Legacy/: CMakeLists.txt  Legacy.pch.hpp  Legacy.py
Legacy/Experimental/: Classes.h
Legacy/ExperimentalClasses/: Lava_005_MASKTextureData.cpp  Lava_005_OCCTextureData.cpp  Lava_005_ROUGHTextureData.cpp  Textures.cpp  Textures.h
Legacy/LegacyIncludes/: AData  Assets  Assets.pch.hpp  Assets2  Assets2.pch.hpp  BuildSystem.pch.hpp  ClassGenLibrary  ClassGenLibraryDebug  Console  Console.pch.hpp  Data  Experimental  Experimental.pch.hpp  ExperimentalDebug  Flow  Flow.pch.hpp  Fonts  Fonts.pch.hpp  Foundation  Graphics  ImageFormats  ImageFormats.pch.hpp  LanguageFunctions.h  LegacyGraphics.pch.hpp  Math  MathClasses  Network.h  OneStudioPlatform  OneStudioPlatform.pch.hpp  OneStudioProjectLibrary  Reflection.pch.hpp  System  UI  UI2  UI2.pch.hpp  UIDarkTheme  UIDarkTheme.pch.hpp  fmt.pch.hpp
Legacy/Math/: CMakeLists.txt
OneStudio/: CMakeLists.txt  main.cpp
OneStudio/Extensions/: CMakeLists.txt
OneStudio/OneStudio/: Classes.h  LightTextureData.cpp  OneStudioApp.cg  OneStudioApp.gen.h  OneStudioTextures.cpp  OneStudioTextures.h
OneStudio/OneStudioPlatform/: OneStudioPlatformTextures.cpp
OneStudio/Plugins/: CMakeLists.txt
(+1738 files in other folders)
